# internal/entity/entities.go
@@ -21,6 +21,34 @@ type UserProfile struct {
 	RentHours time.Duration `json:"rent_hours"`
 }
 
+type Car struct {
+	ID    string `json:"ID" gorm:"primaryKey"`
+	Brand string `json:"brand" gorm:"brand"`
+	Class string `json:"class" gorm:"class"`
+}
+
+type Rent struct {
+	ID        string    `json:"ID" gorm:"primaryKey"`
+	CarID     string    `json:"car_id" gorm:"car_id;unique"`
+	UserID    string    `json:"user_id" gorm:"user_id"`
+	CarClass  string    `json:"car_class" gorm:"car_class"`
+	StartTime time.Time `json:"start_time" gorm:"start_time"`
+}
+
+type RentHistory struct {
+	ID           string        `json:"ID" gorm:"primaryKey"`
+	CarID        string        `json:"car_id" gorm:"car_id;unique"`
+	UserID       string        `json:"user_id" gorm:"user_id"`
+	CarClass     string        `json:"car_class" gorm:"car_class"`
+	RentDuration time.Duration `json:"rent_duration" gorm:"rent_duration"`
+}
+
+type Bill struct {
+	ID     string  `json:"id" gorm:"primaryKey"`
+	UserID string  `json:"user_id" gorm:"user_id"`
+	Price  float64 `json:"price" gorm:"price"`
+}
+
 type UserInfo struct {
 	Username  string        `json:"username"`
 	Email     string        `json:"email"`
